# evidger-cli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: errors.rs  glob.rs  json.rs  main.rs  registry.rs
src/cli/: commands.rs
src/engine/: check.rs  convert.rs  diff.rs  merge.rs  mod.rs  report.rs  report_correlated.html  report_sbom.html  report_vex.html
src/format/: mod.rs
src/format/sbom/: cyclonedx.rs  spdx.rs
src/format/vex/: csaf.rs  mod.rs  openvex.rs
src/models/: mod.rs  sbom.rs  vulnerability.rs
tests/: check.rs  convert.rs  diff.rs  merge.rs  report.rs
tests/data/: sbom_cyclonedx_invalid.json  sbom_cyclonedx_upgraded.json  sbom_cyclonedx_v2.html  sbom_cyclonedx_v2.json  sbom_cyclonedx_valid.json  sbom_spdx_invalid.json  sbom_spdx_v2.json  sbom_spdx_valid.json  test-csaf.html  vex_csaf_invalid.json  vex_csaf_non_cve.json  vex_csaf_updated_justification.json  vex_csaf_v2.html  vex_csaf_v2.json  vex_csaf_valid.json  vex_openvex_affected.json  vex_openvex_before_remediation.json  vex_openvex_for_correlation.json  vex_openvex_invalid.json  vex_openvex_justification_updated.json  vex_openvex_v2.json  vex_openvex_valid.json
