[package]
name = "evidger-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Evidger/evidger-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jsonschema = "0.29"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
